docs overlap fixed

--- a/app/(protected)/student/student-profile/uploadDocs.scss
+++ b/app/(protected)/student/student-profile/uploadDocs.scss
@@ -102,3 +102,10 @@
     }
 }
 
+.fileName {
+    font-size: 12px;
+    width: 100%;
+    text-wrap: wrap;
+    max-width: 100%;
+    overflow-x: hidden;
+}
